# embedded-dma

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md
.github/: bors.toml
.github/workflows/: ci.yml  test.yml
src/: lib.rs  slice.rs
