[package]
name = "embedded-dma"
version = "0.1.2"
authors = [
    "Jan Teske <jteske@posteo.net>",
    "Thales Fragoso <thales.fragosoz@gmail.com>"
]
edition = "2018"
categories = ["embedded", "no-std"]
keywords = ["dma"]
description = "Traits to aid in the creation of sound DMA abstractions"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-embedded/embedded-dma"

[dependencies]
stable_deref_trait = { version = "1.2.0", default-features = false }
